# for display continuity sake please use 2 spaces instead of tabs

2012-11-28 mmichaud <michael.michaud@free.fr>
  * Fix bug id 3590463 in PlanarGraphPlugIn
  
2012-11-28 mmichaud <michael.michaud@free.fr>
  * xtiff_en_US.properties was not found by org.libtiff.jai.util.PropertyUtil
  
2012-11-26 ede
  * add OSX 32bit ECW,JP2 libraries courtesy of gvsigce project
    - modified start scripts accordingly
    - osx jre is started in 32bit by default if possible because the libs
      are x86 compiled
  * portable zip PLUS now extracts ECW libs automatically on linux & osx

2012-11-20 ede
  * bug 3570707: LayerNameRenderer and Windows 7 issue (better fix)
    and also
    - refinement of layername presentation in several dialogs
    - layer comboboxes are now sized properly, optimal preferred size
    - wasted empty space in front of layer descriptions was removed

2012-11-19 ede
  * beautify world icon (zoomToFullExtent,wms layer,...), artwork by ede 

2012-11-18 mmichaud <michael.michaud@free.fr>
  * Improvements in the SaveToPostGIS datasource which now extends 
    DataStoreQueryDataSource (query on demand).
  
2012-11-17 mmichaud <michael.michaud@free.fr>
  * Add persistence of BeanshellAttributeOperation in a project

2012-11-10 mmichaud <michael.michaud@free.fr>
  * PostGIS driver : fix bug ID: 3519931 + split utils methods into two classes
  * ReferencedImage :: fix bug ID: 3077786 and make images resizable
  
2012-11-6 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Upgrade Italian and Spanish  language files

2012-11-01 sstein <sstein@geo.uzh.ch>
  * Upgrade from Sextante 0.6 to Sextante 1.0
    
2012-10-31 mmichaud <michael.michaud@free.fr>
  * Fix ValidatorTestCase broken by the recent change I made on the 
    ValidateSelectedLayersPlugIn (2012-10-28)

2012-10-28 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Upgrade Italian language file

2012-10-28 mmichaud <michael.michaud@free.fr>