@@ -489,11 +489,11 @@ org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-or-u
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete = Insert, update or delete rows using identifiers
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete-help-string = WARNING \!\n\
 	Insert new features, update existing features and delete rows which do not match a layer feature.
-org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = Replace all rows from this table (using TRUNCATE) \
-    by features from this label (using INSERT).
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.local-id = Local identifier
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.no-local-id = No local identifier
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows = Replace all features from table
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = Replace all rows from this table (using TRUNCATE) \
+    by features from this label (using INSERT).
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.select-save-method = Select save method
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.title = Write features in a PostGIS table
 org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISDataSource.overwrite-dialog-message = Table already exists. Do you really want to overwrite it ?
