@@ -484,6 +484,8 @@ org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-upda
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete-help-string = Achtung!\nNeue Objekte werden als neue Zeile eingef\u00FCgt. Die Werte von existierenden Objekten werden ersetzt. Werden Tabellen-Zeilen gefunden, die keinem Ebenen-Objekt entsprechen, dann werden diese Zeilen gel\u00F6scht.
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.local-id = Attribut mit Schl\u00FCsselwerten (f\u00FCr lokale Ebene)
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.no-local-id = Keine Schl\u00FCsselwerte (f\u00FCr lokale Ebene).
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows = \#T\:
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.select-save-method = Abspeichern als/in:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.title = Speichern in einer PostGIS Datenbank  
 org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISDataSource.overwrite-dialog-message = Die Datenbanktabelle is bereits vorhanden. Wollen sie wirklich \u00FCberschreiben?
