@@ -481,6 +481,8 @@ org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-upda
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete-help-string=ATENCION\! los objectos de la base de datos PostGIS que no estan en ninguna capa seran suprimidos a lado server\!\!\!
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.local-id=Identificativo local
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.no-local-id=Ningun Identificativo local
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows = \#T\:
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.select-save-method=Seleci\u00F2nar el metodo para guardar
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.title=Escribir los objectos en una Tabla PostGIS
 org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISDataSource.overwrite-dialog-message=La Tabla ya existe. Quiere subscribirla?
