@@ -484,6 +484,9 @@ org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-upda
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete-help-string = ATTENTION \! Les objets de la base PostGIS qui ne figurent pas dans cette couche seront supprim\u00E9s cot\u00E9 serveur \!\!\!
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.local-id = Identifiant local
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.no-local-id = Aucun identifiant local
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows = Vider la table avant d'y ins\u00E9rer les objets de la couche
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = Vider la table sans toucher \u00E0 sa structure (TRUNCATE) \
+    et la remplir avec les objets de la couche s\u00E9lectionn\u00E9e (INSERT).
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.select-save-method = M\u00E9thode d'enregistrement
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.title = Ecrire les objets dans une table PostGIS
 org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISDataSource.overwrite-dialog-message = La table existe d\u00E9j\u00E0. Voulez-vous vraiment l'\u00E9craser ?
