@@ -481,6 +481,8 @@ org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-upda
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete-help-string=ATTENZIONE \! Gli oggetti del database PostGIS che non figurano dentro alcuni livelli saranno cancellati al lato server \!\!\!
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.local-id=Identificativo locale
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.no-local-id=Nessun Identificativo locale
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows = \#T\:
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.select-save-method=Seleziona metodo di salvataggio
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.title=Scrivere gli oggetti in un tavola PostGIS
 org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISDataSource.overwrite-dialog-message=La tavola esiste gi\u00E0. Vuoi sovrascriverla?
