@@ -546,6 +546,8 @@ org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-upda
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.insert-update-or-delete-help-string = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.local-id = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.no-local-id = \#T\:
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows = \#T\:
+org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.replace-table-rows-help-string = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.select-save-method = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.title = \#T\:
 org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISDataSource.overwrite-dialog-message = \#T\:
